--- a/css/style.css
+++ b/css/style.css
@@ -254,8 +254,8 @@ header {
 .waxing {
   background-image: url("../assets/waxing.png");
 }
-.Polish {
-  background-image: url("../assets/Polish.png");
+.polish {
+  background-image: url("../assets/polish.png");
 }
 .cockpit {
   background-image: url("../assets/cockpit.png");
